python-apt (0.8.8.2) UNRELEASED; urgency=low

  * po/no.po: Remove useless translation (superseded by nb.po)

 -- David Prévot <taffit@debian.org>  Wed, 28 Nov 2012 21:37:17 -0400

python-apt (0.8.8.1) unstable; urgency=low

  * python/tag.cc:
    - make TagSecString_FromStringAndSize, TagSecString_FromString
      static, thanks to jcristau
  * tests/test_lp659438.py:
    - fix missing architecture to make the tests pass again during
      build with the latest apt

 -- Michael Vogt <mvo@debian.org>  Thu, 15 Nov 2012 09:55:24 +0100

python-apt (0.8.8) unstable; urgency=low

  [ Program translation updates ]
  * po/pl.po: Polish (Michał Kułach) (closes: #684308)
  * po/da.po: Danish (Joe Hansen) (closes: #689827)
  
  [ Michael Vogt ]
  * merged lp:~sampo555/python-apt/fix_1042916 reuse existing but
    disabled sources.list entries instead of duplicating them.
    Thanks to "sampo555", LP: #1042916
  * lp:~mvo/python-apt/fix-debfile-crash:
    - fix crash on missing candidates in the multiarch check
  * lp:~mvo/python-apt/recv-key-lp1016643:
    - Only support long (v4) keyids when downloading keys and
      check the keys fingerprint before importing. This avoids
      man-in-the-middle attacks (LP: #1016643)
  * consolidate tests/test_lp1030278.py into the new 
    tests/test_size_to_str.py
  * apt/auth.py:
    - support importing long keyids with leading 0x and mixed case
  * debian/control:
    - build-depend on python-unittest2 to get "with TestCase.assertRaises"
      support in python2.6

  [ Barry Warsaw ]
  * python/string.cc, tests/test_lp1030278.py: Fix StrSizeToStr() so that
    1) it first checks for PyLong-ness so that in Python 3 on i386, it
    will be able to convert larger numbers (via doubles rather than ints);
    2) before doing the conversions through the apt API, check to see if a
    Python exception occurred, e.g. OverflowError, and return an error
    condition in that case instead of masking it.  (LP: #1030278)

  [ James Hunt ]